03.04.2024:
- cron cet/cest fix (? - see todo)
- refactoring
- tete rousse

09.04.2024:
- history display
- minor changes (history date selection)
- github action fix (exception catch)

18.04.2024:
- added 3rd cam (gouter old)
- dropdown history menu (instead of radio)
- image preloading (not much of a speed difference...)
- now displaying photos between 22pm and 6am
- better look both on desktop and mobile

20.04.2024:
- minor changes (...)
- history better look

23.04.2024:
- minor changes (image-not-found now possible on load by using Promise)
    it is very slow though!!!
    when changing days/months/... too fast, it falls behind...
- full screen photos on click (modal)

- NAPIS NOT YET..!

- default wartości dla daty i godziny (current)
- obsługa tego błędu ssl może? - chyba się nie da


to do: ! ! ! ! !  
- zamiast obsługi cet/cest w pythonie, to zrobić to w github actions  - raczej nie, bo punkt poniżej: (?)
- find out a way to make github actions fail less often