@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="history.css">
     <link rel="stylesheet" type="text/css" href="modal.css">
+    <script src="history.js" async></script>
     <script src="modal.js" async></script>
 </head>
 
